@@ -10,7 +10,7 @@ import org.slf4j.LoggerFactory;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
-import org.apache.commons.mail.EmailException;
+import java.util.Collections;
 import java.util.Map;
 import java.util.Optional;
 
@@ -37,13 +37,13 @@ public class AuthController {
         }
         userService.registerUser(user);
         logger.info("User registered successfully: {}", user.getEmail());
-        return ResponseEntity.ok(Map.of("message", "User registered successfully"));
+        return ResponseEntity.ok(Collections.singletonMap("message", "User registered successfully"));
     }
 
     @PostMapping("/login")
     public ResponseEntity<?> login(@RequestBody User user) {
         Optional<User> existingUserOpt = userService.findByEmail(user.getEmail());
-        if (existingUserOpt.isEmpty() || !passwordService.checkPassword(user.getPassword(), existingUserOpt.get().getPassword())) {
+        if (!existingUserOpt.isPresent() || !passwordService.checkPassword(user.getPassword(), existingUserOpt.get().getPassword())) {
             return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body("{\"message\": \"Invalid email or password\"}");
         }
         User existingUser = existingUserOpt.get();
@@ -55,7 +55,7 @@ public class AuthController {
         String email = request.get("email");
         Optional<User> userOpt = userService.findByEmail(email);
 
-        if (userOpt.isEmpty()) {
+        if (!userOpt.isPresent()) {
             logger.warn("Attempt to reset password for non-existent email: {}", email);
             return ResponseEntity.status(HttpStatus.NOT_FOUND).body("Email address not found.");
         }
@@ -72,14 +72,15 @@ public class AuthController {
         // Send email with the reset link
         String resetLink = "http://localhost:4200/reset-password?token=" + resetToken;
         try {
-            emailService.sendPasswordResetEmail(user.getEmail(), resetLink);
+            emailService.sendEmail(user.getEmail(), "Password Reset Request", "Reset your password using this link: " + resetLink);
             logger.info("Password reset link sent to: {}", email);
             return ResponseEntity.ok("Password reset link sent.");
-        } catch (EmailException e) {
+        } catch (Exception e) {
             logger.error("Failed to send password reset email", e);
             return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body("Failed to send password reset email.");
         }
     }
+
 
     @PostMapping("/reset-password")
     public ResponseEntity<?> resetPassword(@RequestBody Map<String, String> request) {
@@ -88,7 +89,7 @@ public class AuthController {
 
         Optional<User> userOpt = userService.findByResetToken(token);
 
-        if (userOpt.isEmpty()) {
+        if (!userOpt.isPresent()) {
             logger.warn("Invalid or expired reset token used.");
             return ResponseEntity.status(HttpStatus.BAD_REQUEST).body("Invalid or expired reset token.");
         }
@@ -102,5 +103,15 @@ public class AuthController {
 
         logger.info("Password reset successfully for user: {}", user.getEmail());
         return ResponseEntity.ok("Password reset successful.");
+    }
+
+    @GetMapping("/test-email")
+    public ResponseEntity<?> testEmail() {
+        try {
+            emailService.sendEmail("test@example.com", "Test Subject", "This is a test email.");
+            return ResponseEntity.ok("Test email sent successfully.");
+        } catch (Exception e) {
+            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body("Failed to send test email: " + e.getMessage());
+        }
     }
 }
